Fix font issue where bold was used instead of medium (500). This made font look ver blurry and poor quality

--- a/css/style.css
+++ b/css/style.css
@@ -688,6 +688,10 @@ table {
 	margin: 0;
 }
 
+table th {
+	font-weight: 500;
+}
+
 /* Nice Lined Tables */
 table.line-table tr {
 	display: table-row;
